[bumpversion]
current_version = 0.7.0
commit = True
tag = True
message = Bump up to version {new_version}.

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py3

[flake8]
exclude =
    doc/conf.py,
    garnett/gsdhoomd.py,
    garnett/pygsd.py,
max_line_length = 120

[bumpversion:file:setup.py]

[bumpversion:file:garnett/version.py]

[bumpversion:file:doc/conf.py]

